--- a/Notes/Unit1/Unit1.tex
+++ b/Notes/Unit1/Unit1.tex
@@ -8,7 +8,7 @@
 
 
 
-\chapter{???}
+\chapter{Electronic Phenomena}
 \section{Lecture 1: Introduction/Key Trends}
 \begin{itemize}
     \item \marginnote{3/29:}Largely asynchronous, but synchronous discussions, office hours, and tests.
