--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -25,8 +25,14 @@
 \pagenumbering{arabic}
 \pagestyle{main}
 \renewcommand{\leftmark}{Homework \thesection}
-\section{???}
+\section{Electronic Phenomena}
 \subfile{PSet1/pset1.tex}
+\newpage
+
+
+
+\renewcommand{\leftmark}{References}
+\printbibliography[heading=bibintoc]
 
 
 
