--- a/preamble.tex
+++ b/preamble.tex
@@ -10,7 +10,7 @@
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{physics,siunitx,bm}
 \usepackage{mhchem,chemfig,chemformula}
-\usepackage{tikz}
+\usepackage{tikz,graphicx}
 \usepackage{float,subcaption}
 \usepackage{tabularx}
 \usepackage[hidelinks]{hyperref}
