--- a/Notes/notes.tex
+++ b/Notes/notes.tex
@@ -31,6 +31,8 @@
 \renewcommand{\chaptermark}[1]{\markboth{\chaptername\ \thechapter\ (#1)}{}}
 \subfile{Unit1/Unit1.tex}
 
+\subfile{Unit2/Unit2.tex}
+
 \printbibliography[heading=bibintoc]
 
 
